--- a/README.ipynb
+++ b/README.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "![alt text](./data/plots/areas/compressed/schrEq1D_gaussian_wpacketpot_high_area_c.gif \"Example of quantum tunneling effect\")\n",
     "\n",
+    "More plots [here](https://github.com/AniolSala/schrodinger_equation/tree/master/data/plots).\n",
+    "\n",
     "## The leapfrog method\n",
     "\n",
     "To visualize the Schrödinger equation it has to be solved first. Here we use the leapfrog method,\n",
@@ -23,8 +25,8 @@
     "$$\n",
     "\n",
     "with $x$ in the range $[x_0, x_f]$, then we can discretize the interval and approximate the\n",
-    "differential equation with the [finite difference method]\n",
-    "(https://en.wikipedia.org/wiki/Finite_difference_method) using the leapfrog algorithm:\n",
+    "differential equation with the [finite difference method](https://en.wikipedia.org/wiki/Finite_difference_method)\n",
+    "using the leapfrog algorithm:\n",
     "\n",
     "$$\n",
     "\\begin{equation}\n",
